--- a/day04/test32_folium_test.ipynb
+++ b/day04/test32_folium_test.ipynb
@@ -448,7 +448,6 @@
     }
    ],
    "source": [
-    "# tiles 종류 : cartodb positron, cartodb dark_matter, openstreetmap\n",
     "map = folium.Map(location=[37.550970,126.988323],zoom_start=15,tiles='openstreetmap')\n",
     "map"
    ]
@@ -544,6 +543,7 @@
     }
    ],
    "source": [
+    "# tiles 종류 : cartodb positron, cartodb dark_matter, openstreetmap,open topomap\n",
     "map = folium.Map(location=[37.550970,126.988323],zoom_start=15,tiles='open topomap')\n",
     "map"
    ]
