--- a/day05/test34_json.ipynb
+++ b/day05/test34_json.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -77,11 +77,167 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### JSON 사용\n",
+    "파이썬의 딕셔너리와 사용방법이 동일"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1500000000"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['ferrari']['price']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data['ferrari']['auto'] = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ionic': {'price': 20000000, 'year': '2019', 'auto': True},\n",
+       " 'genesis': {'price': 80000000, 'year': '2022', 'auto': True},\n",
+       " 'ferrari': {'price': 1500000000, 'year': '2020', 'auto': True}}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### JSON 쓰기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'audi': {'price': 300000000, 'year': '2024', 'auto': True},\n",
+       " 'porsche': {'price': 1000000000, 'year': '2017', 'auto': True}}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# json으로 만들 기본데이터 생성\n",
+    "supercars1 = dict()  #json은 딕셔너리랑 완전히 일치, 생성시도 딕셔너리로 생성\n",
+    "\n",
+    "audi = dict()\n",
+    "audi['price'] = 300000000\n",
+    "audi['year'] = '2024'\n",
+    "audi['auto'] = True\n",
+    "\n",
+    "porsche = dict()\n",
+    "porsche['price'] = 1000000000\n",
+    "porsche['year'] = '2017'\n",
+    "porsche['auto'] = True\n",
+    "\n",
+    "supercars['audi'] = audi\n",
+    "supercars['porsche'] = porsche\n",
+    "\n",
+    "supercars"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### json 파일 쓰기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open('./supercars.json',mode='w',encoding='utf-8')\n",
+    "json.dump(supercars,f,indent='\\t',ensure_ascii=True)\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## with -> 나는 클로즈를 내가 하고 싶지 않다. 니(python)가 해줘\n",
+    "with open('./supercars2.json',mode='w',encoding='utf-8') as f2:\n",
+    "    json.dump(supercars,f2,indent='\\t', ensure_ascii=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "\t\"audi\": {\n",
+      "\t\t\"price\": 300000000,\n",
+      "\t\t\"year\": \"2024\",\n",
+      "\t\t\"auto\": true\n",
+      "\t},\n",
+      "\t\"porsche\": {\n",
+      "\t\t\"price\": 1000000000,\n",
+      "\t\t\"year\": \"2017\",\n",
+      "\t\t\"auto\": true\n",
+      "\t}\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "## json 파을을 읽어옴. with문 사용\n",
+    "with open('./supercars.json',mode='r',encoding='utf-8') as file:\n",
+    "    data = json.load(file)\n",
+    "print(json.dumps(data,indent=\"\\t\")) "
+   ]
   }
  ],
  "metadata": {
